// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResponsiveImage > should render ResponsiveImage with props 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="box"
      style="width: 800px; height: 600px;"
    >
      <img
        alt="Who painted The Starry Night?"
        class="img"
        src="https://i.pinimg.com/originals/a6/60/72/a66072b0e88258f2898a76c3f3c01041.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`ResponsiveImage > should render error state 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="centerOverlay"
    >
      <div
        class="inner"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-triangle-exclamation icon"
          data-icon="triangle-exclamation"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
            fill="currentColor"
          />
        </svg>
        <div
          class="typography subtitle full"
        >
          Oh no! Unable to load image
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResponsiveImage > should render error state when image fails to load 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="centerOverlay"
    >
      <div
        class="inner"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-triangle-exclamation icon"
          data-icon="triangle-exclamation"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
            fill="currentColor"
          />
        </svg>
        <div
          data-testid="typography"
        >
          Oh no! Unable to load image
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResponsiveImage > should render loading state 1`] = `
<div>
  <div
    class="container"
  />
</div>
`;

exports[`ResponsiveImage > should render loading state when no imageURL is provided 1`] = `
<div>
  <div
    class="container"
  />
</div>
`;

exports[`ResponsiveImage > should render with blur effect 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="box"
      style="width: 800px; height: 600px;"
    >
      <img
        alt="blur"
        class="img"
        src="https://i.pinimg.com/originals/a6/60/72/a66072b0e88258f2898a76c3f3c01041.jpg"
        style="filter: blur(8px);"
      />
    </div>
  </div>
</div>
`;

exports[`ResponsiveImage > should render with noBorder 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="boxNoBorder"
      style="width: 800px; height: 600px;"
    >
      <img
        alt="noBorder"
        class="img"
        src="https://i.pinimg.com/originals/a6/60/72/a66072b0e88258f2898a76c3f3c01041.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`ResponsiveImage > should render with overlay children 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="box"
      style="width: 800px; height: 600px;"
    >
      <img
        alt="overlay"
        class="img"
        src="https://i.pinimg.com/originals/a6/60/72/a66072b0e88258f2898a76c3f3c01041.jpg"
      />
      <div
        class="overlay"
      >
        <span>
          Overlay Content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResponsiveImage > should render with square effect 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="box"
      style="width: 800px; height: 600px;"
    >
      <div
        data-effect="SQUARE_3X3"
        data-testid="square-effect"
      />
      <img
        alt="square"
        class="img"
        src="https://i.pinimg.com/originals/a6/60/72/a66072b0e88258f2898a76c3f3c01041.jpg"
      />
    </div>
  </div>
</div>
`;
